--- a/src/css/06-covers.css
+++ b/src/css/06-covers.css
@@ -1,8 +1,14 @@
 /* 06-covers */
 #covers {
-  position: relative;
-  overflow: hidden;
   height: 508px;
+}
+
+.marquee {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
   background-image: image-set(
     url(/images/covers/background-mob.jpg) 1x,
     url(/images/covers/background-mob@2x.jpg) 2x
@@ -10,21 +16,15 @@
   background-size: cover;
 }
 
-.marquee {
-  position: absolute;
-  top: -30px;
-  right: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  justify-content: center;
-  align-items: center;
+.marquee.container {
+  padding: 0;
+  overflow: hidden;
+  max-height: 508px;
 }
 
 .marquee-inner {
   display: flex;
-  gap: 24px;
+  gap: 25px;
   transform: rotate(16deg);
 }
 .marquee-wrapper {
@@ -34,7 +34,7 @@
   display: block;
   flex-shrink: 0;
   width: 282px;
-  height: 162px;
+  height: 163px;
   object-fit: cover;
 }
 .animation {
@@ -63,18 +63,24 @@
 @media only screen and (min-width: 768px) {
   #covers {
     height: 960px;
+  }
+
+  .marquee.container {
+    max-height: 960px;
+  }
+
+  .marquee {
+    gap: 50px;
     background-image: image-set(
       url(/images/covers/background-tab.jpg) 1x,
       url(/images/covers/background-tab@2x.jpg) 2x
     );
   }
-  .marquee {
-    top: -40px;
-    gap: 44px;
-  }
+
   .marquee-inner {
-    gap: 44px;
+    gap: 50px;
   }
+
   .marquee-card {
     width: 544px;
     height: 314px;
@@ -84,14 +90,16 @@
 /* Desktop */
 @media only screen and (min-width: 1440px) {
   #covers {
+  }
+
+  .marquee {
+    gap: 64px;
     background-image: image-set(
       url(/images/covers/background-desk.jpg) 1x,
       url(/images/covers/background-desk@2x.jpg) 2x
     );
   }
-  .marquee {
-    gap: 64px;
-  }
+
   .marquee-inner {
     gap: 64px;
   }
