--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -150,7 +150,7 @@
 .footer-overlay {
   width: 100%;
   height: 100%;
-  background-image: url(../images/footer/background.png);
+  background-image: url(/images/footer/background.png);
   background-repeat: repeat-y;
 
   position: absolute;
@@ -161,7 +161,7 @@
 
 @media screen and (min-resolution: 192dpi) {
   .footer-overlay {
-    background-image: url(../images/footer/background@2x.png);
+    background-image: url(/images/footer/background@2x.png);
   }
 }
 /* ----------- /MOBILE ------------ */
